[package]
name = "iso-8601"
version = "0.4.2"
authors = ["Robin Stumm <serverkorken@gmail.com>", "AldanTanneo <aldantanneo@gmail.com>"]
description = "Fully compliant ISO 8601 parser"
repository = "https://github.com/AldanTanneo/iso-8601"
keywords = ["iso8601", "date", "time", "parser"]
categories = ["parser-implementations", "date-and-time"]
license = "Apache-2.0"
edition = "2021"

[features]
chrono-serde = ["chrono/serde", "serde"]

[dependencies]
nom = "7.1"
nom-regex = "0.2"
lazy_static = "1.4"
chrono = { version = "0.4", optional = true }
serde = { version = "1.0", optional = true }
